# wasm-pack-template-fr

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  utils.rs
tests/: web.rs
